--- a/Frontend/Car Selection Page/Car-Selection-Page/angular.json
+++ b/Frontend/Car Selection Page/Car-Selection-Page/angular.json
@@ -31,6 +31,8 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+
             ],
             "scripts": []
           },
@@ -88,7 +90,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+
             ],
             "scripts": []
           }
