--- a/Frontend/Admin/package.json
+++ b/Frontend/Admin/package.json
@@ -21,7 +21,13 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.7",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@swimlane/ngx-charts": "^21.1.2",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
+    "jsvectormap": "^1.6.0",
+    "ngx-chartjs": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
