--- a/Backend/Signup/Signup/src/main/resources/application.properties
+++ b/Backend/Signup/Signup/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Signup
-spring.datasource.url=jdbc:postgresql://localhost:5432/Sample
+spring.datasource.url=jdbc:postgresql://localhost:5432/Newdatabase
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=nandhini
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=8080
+server.port=8081
