--- a/Frontend/Admin/package.json
+++ b/Frontend/Admin/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.7",
     "express": "^4.18.2",
     "jsvectormap": "^1.6.0",
+    "leaflet": "^1.9.4",
     "ngx-chartjs": "^0.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -38,6 +39,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
