--- a/Frontend/Car Selection Page/Car-Selection-Page/angular.json
+++ b/Frontend/Car Selection Page/Car-Selection-Page/angular.json
@@ -1,3 +1,4 @@
+
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
@@ -31,7 +32,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "node_modules/animate.css/animate.min.css"
 
             ],
             "scripts": []
