--- a/Frontend/Car Selection Page/Car-Selection-Page/package.json
+++ b/Frontend/Car Selection Page/Car-Selection-Page/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@syncfusion/ej2-angular-buttons": "^28.1.37",
+    "animate.css": "^4.1.1",
+    "canvas-confetti": "^1.9.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "typed.js": "^2.1.0",
     "zone.js": "~0.14.10"
