--- a/Frontend/Landing_page/angular.json
+++ b/Frontend/Landing_page/angular.json
@@ -29,11 +29,15 @@
             "styles": [
               "src/styles.css",
               "node_modules/leaflet/dist/leaflet.css",
-               "node_modules/bootstrap/dist/css/bootstrap.min.css"
+               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
+               "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
 
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+               "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/owl.carousel/dist/owl.carousel.min.js"
             ]
           },
           "configurations": {
@@ -97,5 +101,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "5756bfdf-5023-404c-aa82-323fb8f99a2e"
   }
 }
