--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@angular/animations": "^19.0.6"
+    "@angular/animations": "^19.0.6",
+    "sweetalert": "^2.1.2"
   }
 }
