--- a/Backend/Signup/Signup/src/main/resources/application.properties
+++ b/Backend/Signup/Signup/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=Signup
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/Contact
 spring.datasource.username=postgres
-spring.datasource.password=root@123
-spring.jpa.hibernate.ddl-auto=none
+spring.datasource.password=nandhini
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
