--- a/Frontend/Landing_page/angular.json
+++ b/Frontend/Landing_page/angular.json
@@ -30,14 +30,16 @@
               "src/styles.css",
               "node_modules/leaflet/dist/leaflet.css",
                "node_modules/bootstrap/dist/css/bootstrap.min.css",
-               "node_modules/owl.carousel/dist/assets/owl.carousel.min.css",
-               "node_modules/owl.carousel/dist/assets/owl.theme.default.min.css"
+               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+               "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css"
+            
 
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-               "node_modules/jquery/dist/jquery.min.js",
-                "node_modules/owl.carousel/dist/owl.carousel.min.js"
+              "node_modules/jquery/dist/jquery.min.js", 
+              "node_modules/owl.carousel/dist/owl.carousel.min.js"
+              
             ]
           },
           "configurations": {
