--- a/Frontend/Landing_page/tsconfig.json
+++ b/Frontend/Landing_page/tsconfig.json
@@ -16,7 +16,7 @@
     "target": "ES2022",
     "module": "ES2022",
     "strictNullChecks": false,
-    // "types": ["jquery"]
+    "types": ["jquery"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
