--- a/Frontend/Landing_page/package.json
+++ b/Frontend/Landing_page/package.json
@@ -24,6 +24,7 @@
     "ngx-owl-carousel-o": "^19.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
