--- a/Frontend/Landing_page/package.json
+++ b/Frontend/Landing_page/package.json
@@ -34,6 +34,7 @@
     "@angular/compiler-cli": "^19.0.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/jquery": "^3.5.32",
     "@types/leaflet": "^1.9.16",
     "jasmine-core": "~5.4.0",
