--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=myRNM
-spring.datasource.url=jdbc:postgresql://localhost:5432/MyRNM
+spring.datasource.url=jdbc:postgresql://localhost:5432/myrnm
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=ZoroMohan@48
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
