--- a/Frontend/Landing_page/package.json
+++ b/Frontend/Landing_page/package.json
@@ -21,9 +21,10 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
-    "ngx-owl-carousel": "^2.0.7",
+    "ngx-owl-carousel-o": "^19.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
