--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -2,11 +2,11 @@ spring.application.name=myRNM
 spring.datasource.url=jdbc:postgresql://localhost:5432/myrnm
 spring.datasource.username=postgres
 
-spring.datasource.password=root@123
+spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=org.postgresql.Driver
