--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=myRNM
-spring.datasource.url=jdbc:postgresql://localhost:5432/myrnm
+spring.datasource.url=jdbc:postgresql://localhost:5432/Myrnm
 spring.datasource.username=postgres
 
 spring.datasource.password=root
