--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -6,7 +6,17 @@ spring.datasource.password=root
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.properties.hibernate.format_sql=true
-#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=manager.myrnm@gmail.com
+spring.mail.password=hvgp rcdj zexn hpqv
+spring.mail.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
