--- a/Frontend/Landing_page/package.json
+++ b/Frontend/Landing_page/package.json
@@ -19,11 +19,13 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "ngx-owl-carousel-o": "^19.0.0",
     "owl.carousel": "^2.3.4",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
