--- a/Frontend/Landing_page/package.json
+++ b/Frontend/Landing_page/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.0.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.7",
+    "crypto-js": "^4.2.0",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "ngx-owl-carousel-o": "^19.0.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "^19.0.4",
     "@angular/compiler-cli": "^19.0.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
     "@types/leaflet": "^1.9.16",
