--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=myRNM
-spring.datasource.url=jdbc:postgresql://localhost:5432/MyRNM
+spring.datasource.url=jdbc:postgresql://localhost:5432/myrnm
 spring.datasource.username=postgres
 
 spring.datasource.password=ZoroMohan@48
@@ -10,3 +10,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+    # Serve Angular static content under the `/` route
+    #spring.web.resources.static-locations=classpath:/static/
+    #
+    ## Ensure API routes are correctly prefixed
+    #spring.mvc.servlet.path=/api
