--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=myRNM
 spring.datasource.url=jdbc:postgresql://localhost:5432/MyRNM
 spring.datasource.username=postgres
 
-spring.datasource.password=ZoroMohan@48
+spring.datasource.password=root@123
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
@@ -10,3 +10,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=manager.myrnm@gmail.com
+spring.mail.password=hvgp rcdj zexn hpqv
+spring.mail.protocol=smtp
+spring.mail.smtp.auth=true
+spring.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
