Changes in backend and frontend

--- a/Backend/myRNM/src/main/resources/application.properties
+++ b/Backend/myRNM/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=myRNM
-spring.datasource.url=jdbc:postgresql://localhost:5432/Myrnm
+spring.datasource.url=jdbc:postgresql://localhost:5432/myRNM
 spring.datasource.username=postgres
 
 spring.datasource.password=ZoroMohan@48
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
